--- a/HTML_Moduuli2.html
+++ b/HTML_Moduuli2.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <script type="text/javascript" src="js/JS_Moduuli2.js"></script>
+  <script type="text/javascript" src="js/JS_Moduuli2.js" defer></script>
 </head>
 <body>
+<p>2.3</p>
+   <ul>
+       <li>First dog</li>
+       <li>Second dog</li>
+       <li>Third dog</li>
+       <li>Fourth dog</li>
+       <li>Fifth dog</li>
+       <li>Sixth dog</li>
+   </ul>
+<p>2.4</p>
+<p id="numbers"></p>
+<input type="button" value="Start" onClick = "numbers();">
 
 </body>
 </html>
