--- a/HTML_Moduuli2.html
+++ b/HTML_Moduuli2.html
@@ -7,17 +7,14 @@
 </head>
 <body>
 <p>2.3</p>
-   <ul>
-       <li>First dog</li>
-       <li>Second dog</li>
-       <li>Third dog</li>
-       <li>Fourth dog</li>
-       <li>Fifth dog</li>
-       <li>Sixth dog</li>
+   <ul id="reverseDoge">
+       <li>Here will be your dogs</li>
    </ul>
 <p>2.4</p>
 <p id="numbers"></p>
 <input type="button" value="Start" onClick = "numbers();">
-
+<p>2.5</p>
+<p id="numbersrep"></p>
+<input type="button" value="Start" onClick = "numbersrep();">
 </body>
 </html>
