--- a/module3-starters-main/t1/1.html
+++ b/module3-starters-main/t1/1.html
@@ -12,12 +12,7 @@
 
 <body>
     <h1>Task 1</h1>
-    <ul id="target" class="my-list">
-        <li>First item</li>
-        <li>Second item</li>
-        <li>Third item</li>
-    </ul>
-
+    <ul id="target"></ul>
 </body>
 
 </html>
