--- a/module3-starters-main/t8-osittain-2--4p/8.html
+++ b/module3-starters-main/t8-osittain-2--4p/8.html
@@ -22,7 +22,7 @@
         <option value="div">division</option>
     </select>
     <br>
-    <button id="start">Calculate</button>
+    <button id="start" onclick="calculate()">Calculate</button>
     <p id="result"></p>
 </body>
 
