--- a/HTML_Moduuli4.html
+++ b/HTML_Moduuli4.html
@@ -6,11 +6,24 @@
     <script type="text/javascript" src="js/JS_Moduuli4.js" defer></script>
 </head>
 <body>
-<h1>4.1</h1>
+<h3>4.1</h3>
 <form action="https://api.tvmaze.com/search/shows" id="action">
-  <input id="query" name="q" type="text">
+  <input id="query1" name="q1" type="text">
   <input type="submit" value="Search">
 </form>
-<h2>4.2</h2>
+<h3>4.2</h3>
+<form action="https://api.tvmaze.com/search/shows" id="tv">
+    <input id="query" name="q" type="text">
+    <input type="submit" value="Search">
+</form>
+<h3>4.3</h3>
+<form action="https://api.tvmaze.com/search/shows" id="tv3">
+    <input id="query2" name="q2" type="text">
+    <input type="submit" value="Search">
+</form>
+<div id="results"></div>
+<h3>4.4</h3>
+<h3>4.5</h3>
+Chuck Norris made me write this, check your console
 </body>
 </html>
