--- a/HTML_Moduuli4.3.html
+++ b/HTML_Moduuli4.3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h3>4.3</h3>
-<form action="https://api.tvmaze.com/search/shows" id="tv3">
+<form action="https://api.tvmaze.com/search/shows" id="tv">
     <input id="query" name="q" type="text">
     <input type="submit" value="Search">
 </form>
