--- a/HTML_Moduuli4.6.html
+++ b/HTML_Moduuli4.6.html
@@ -7,5 +7,10 @@
 </head>
 <body>
 <h3>4.6</h3>
+<form action="https://api.chucknorris.io/jokes/search?" id="chuck">
+    <input name='query' type="text">
+    <input type="submit" value="Search">
+</form>
+<div id="results"></div>
 </body>
 </html>
